# presentation-assistant

./: Cargo.toml  README.md
key-based-presentation-assistant/: Cargo.toml
revealjs-based-presentation-assistant/: Cargo.toml
revealjs-based-presentation-assistant/src/: main.rs
src/: main.rs
template/: README.md  index.html
